# backports.zstd

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: 0_generic.yaml
.github/workflows/: build.yml  check.yml
src/c/compat/: backports_zstd_compat.h  backports_zstd_compat_py310.c  backports_zstd_edits.h  backports_zstd_redef.h  backports_zstd_redef_orig.h
src/c/compression_zstd/: _zstdmodule.c  _zstdmodule.h  compressor.c  decompressor.c  zstddict.c  zstddict.h
src/c/compression_zstd/clinic/: _zstdmodule.c.h  compressor.c.h  decompressor.c.h  zstddict.c.h
src/python/backports/zstd/: __init__.py  __init__.pyi  _tarfile.py  tarfile.py
src/python/backports/zstd/_cffi/: compressor.py  decompressor.py  zstddict.py
src/python/backports/zstd/zipfile/: __init__.py
sync/: .gitignore  cpython.json  cpython.sh  sync.sh  typeshed.json
tests/: test_fixme.py  test_integration.py
tests/test/: archiver_tests.py  test_tarfile.py  test_zstd.py
tests/test/support/: __init__.py
tests/test/test_zipfile/: test_core.py
tests/test/test_zipfile/_path/: test_path.py
